--- a/src/test/fixtures/shifts.yml
+++ b/src/test/fixtures/shifts.yml
@@ -11,3 +11,15 @@ two:
   user_id: 519
   start_time: "2000-01-02 09:00"
   end_time: "2000-01-02 17:00"
+
+three:
+  id: 3
+  user_id: 519
+  start_time: "2000-01-02 18:00"
+  end_time: "2000-01-03 04:00"
+
+four:
+  id: 4
+  user_id: 2
+  start_time: "2000-01-02 09:00"
+  end_time: "2000-01-03 17:00"
