--- a/src/test/fixtures/users.yml
+++ b/src/test/fixtures/users.yml
@@ -1,13 +1,19 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  id: 519
+  id: 1
   first_name: Spencer
   last_name: McWilliams
-  password_digest: $2a$10$Bpahc5LJ1xiPUh1GshsNbeLWY.P98XtLGtujTnbGmCf4K4jRCF39y
+  password_digest: $2a$10$HUEh28qSVwTBlsi34HWqe.ZeUVntiMyAX1F7P7gtFBXwIRIhJux8i
 
 two:
   id: 2
   first_name: John
   last_name: Doe
-  password_digest: digestPlaceholder
+  password_digest: $2a$10$HUEh28qSVwTBlsi34HWqe.ZeUVntiMyAX1F7P7gtFBXwIRIhJux8i
+
+three:
+  id: 3
+  first_name: Jane
+  last_name: Doe
+  password_digest: $2a$10$HUEh28qSVwTBlsi34HWqe.ZeUVntiMyAX1F7P7gtFBXwIRIhJux8i
