edits master_schedule to print index of all shifts for testing purposes

--- a/src/test/fixtures/shifts.yml
+++ b/src/test/fixtures/shifts.yml
@@ -15,11 +15,17 @@ two:
 three:
   id: 3
   user_id: 2
-  start_time: "2000-01-02 18:00"
-  end_time: "2000-01-03 04:00"
+  start_time: "2014-10-22 18:00"
+  end_time: "2014-10-22 20:00"
 
 four:
   id: 4
   user_id: 3
-  start_time: "2000-01-02 09:00"
-  end_time: "2000-01-03 17:00"
+  start_time: "2014-10-23 09:00"
+  end_time: "2014-10-23 20:00"
+
+five:
+  id: 5
+  user_id: 2
+  start_time: "2014-10-24 05:00"
+  end_time: "2014-10-24 12:00"
