--- a/src/test/fixtures/users.yml
+++ b/src/test/fixtures/users.yml
@@ -2,6 +2,7 @@
 
 one:
   id: 1
+  username: spencer
   first_name: Spencer
   last_name: McWilliams
   password_digest: $2a$10$HUEh28qSVwTBlsi34HWqe.ZeUVntiMyAX1F7P7gtFBXwIRIhJux8i
@@ -9,6 +10,7 @@ one:
 
 two:
   id: 2
+  username: john
   first_name: John
   last_name: Doh
   password_digest: $2a$10$HUEh28qSVwTBlsi34HWqe.ZeUVntiMyAX1F7P7gtFBXwIRIhJux8i
@@ -16,6 +18,7 @@ two:
 
 three:
   id: 3
+  username: jane
   first_name: Jane
   last_name: Doe
   password_digest: $2a$10$HUEh28qSVwTBlsi34HWqe.ZeUVntiMyAX1F7P7gtFBXwIRIhJux8i
