trying to fix testing

--- a/src/test/fixtures/users.yml
+++ b/src/test/fixtures/users.yml
@@ -2,24 +2,8 @@
 
 one:
   id: 1
-  username: spencer
-  first_name: Spencer
-  last_name: McWilliams
+  username: admin
+  first_name: User
+  last_name: One 
   password_digest: $2a$10$HUEh28qSVwTBlsi34HWqe.ZeUVntiMyAX1F7P7gtFBXwIRIhJux8i
   access: 1
-
-two:
-  id: 2
-  username: john
-  first_name: John
-  last_name: Doh
-  password_digest: $2a$10$HUEh28qSVwTBlsi34HWqe.ZeUVntiMyAX1F7P7gtFBXwIRIhJux8i
-  access: 2
-
-three:
-  id: 3
-  username: jane
-  first_name: Jane
-  last_name: Doe
-  password_digest: $2a$10$HUEh28qSVwTBlsi34HWqe.ZeUVntiMyAX1F7P7gtFBXwIRIhJux8i
-  access: 2
