--- a/src/Gemfile
+++ b/src/Gemfile
@@ -38,6 +38,8 @@ gem 'bcrypt', '~> 3.1.7'
 
   gem 'bootstrap-sass', '~> 3.2.0'
   gem 'autoprefixer-rails'
+  gem 'momentjs-rails', '>= 2.8.1'
+  gem 'bootstrap3-datetimepicker-rails', '~> 3.1.3'
 
 group :development, :test do
   # Call 'debugger' anywhere in the code to stop execution and get a debugger console
@@ -48,5 +50,6 @@ group :development, :test do
 
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
+
 end
 
